# molfidget

./: .gitignore  CLAUDE.md  README.md  check.ipynb  pyproject.toml
.github/workflows/: pypi-publish.yml
data/mlf/: 5AWL-H.mlf  AA_dimer.mlf  C60.mlf  CO.mlf  DEET.mlf  H2.mlf  H2O.mlf  azobenzene.mlf  c-hexane.mlf  calix-5-arene.mlf  carbon_dioxide.mlf  carbon_monoxide.mlf  cyclohexane.mlf  dimethoxypilar-5-arene.mlf  ethanol.mlf  ethanol_notch_3.mlf  ferroin.mlf  h2.mlf  h2o.mlf  hydrogen.mlf  methylether.mlf  methylether.mol  n-hexane.mlf  self-threading.mlf  trineopentylbenzene.mlf
data/mol/: 5AWL-H.mol  AA_dimer.mol  Aceticacid.mol  C60.mol  CH4.mol  CO.mol  CO2.mol  DEET.mol  H2.mol  H2O.mol  N2.mol  NH3.mol  O2.mol  azobenzene.mol  calix-5-arene.mol  dimetoxypilar-5-arene.mol  ethanol.mol  ferroin.mol  methylether.mol  self-threading.mol  trineopentylbenzene.mol
docs/: files.md  index.md  mlf_file.md  print_tips.md
mlf/: ethanol.mlf
molfidget/: atom.py  bond.py  check.ipynb  check_vedo.py  config.py  constants.py  labeled_scene_viewer.py  molecule.py  molfidget.py  shape.py
src/molfidget/: molfidget.py
testmols/: J2.330B.mol  Ph-BTBT-C8.mol  acetophenone.mol  azobenzene.mol  biphenyl.mol  bithiophene.mol  c-hexane.mol  calix-5-arene.mol  glutamic_acid.mol  ibuprofen.mol  methylether.yaml  morphine.mol  n-hexane.mol  o.mol  sodium_glutamte.mol  taurine.mol  toluene.mol
