[tool.poetry]
name = "molfidget"
version = "0.0.1"
description = "A tool to generate printable molecular models from PDB files."
authors = ["Ryosuke Tajima <ryosuke.tajima@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "molfidget", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scipy = "^1.10.0"
trimesh = "^4.0.0"
manifold3d = "^3.0.0"
pyglet = "<2.0.0"

[tool.poetry.scripts]
molfidget = "molfidget.molfidget:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"