[tool.poetry]
name = "molfidget"
version = "0.1.0"
description = ""
authors = ["Ryosuke Tajima <tajima.ryosuke@techmagic.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.15.3"
trimesh = "^4.6.9"
manifold3d = "^3.1.0"
pyglet = "<2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
molfidget = "molfidget.molfidget:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
